# voxels_converter

./: BoxelsConversion.cpp  CMakeLists.txt  GraspingDetection.cpp  GraspingDetection.h  ModelReconstruction.cpp  ModelReconstruction.h  VoxelsConversion.cpp  VoxelsConversion.h  VoxelsConversion.h~  main.cpp  pcd_reconstruction.cpp  voxel_test.cpp
pcl_segmented/amphora_1/: amphora_1.pcd
pcl_segmented/black_box/: black_box.pcd
pcl_segmented/stone/: stone_1.pcd  stone_2.pcd
